Contrast fix 2

--- a/src/styles/tailwind-output.css
+++ b/src/styles/tailwind-output.css
@@ -1242,6 +1242,10 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(249, 250, 251, var(--tw-text-opacity));
 }
+.text-\[\#DE2459\] {
+	--tw-text-opacity: 1;
+	color: rgba(222, 36, 89, var(--tw-text-opacity));
+}
 .shadow-md {
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
